[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://scenes/BossLifeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/level2/cloth_lvl_2.png" type="Texture" id=3]
[ext_resource path="res://scenes/Life.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/World.gd" type="Script" id=5]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/enemy/Meatballs.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/YOUWON.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Dialogues.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Soundtrack/it_s_raining_meatballs.ogg" type="AudioStream" id=11]

[node name="World2" type="Node2D"]
script = ExtResource( 5 )
gameover_scene = ExtResource( 8 )
you_won_scene = ExtResource( 9 )
next_course = ExtResource( 10 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
centered = false

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 608.207, 634.763 )

[node name="Boss" parent="." instance=ExtResource( 7 )]
position = Vector2( 618.481, 256.966 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Brioschis" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -72.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
life_scene = ExtResource( 4 )

[node name="LifeBar" parent="CanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 459.509, 11.7691 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0
autoplay = true
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="dead" from="Boss" to="." method="_on_Boss_dead"]
[connection signal="got_hit" from="Boss" to="." method="_on_Boss_got_hit"]
